// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestContext should have a request object for platform amp, origin https://www.bbc.com, isUK, false, pageType article, statsDestination NEWS_PS_TEST & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    amp
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    article
  </span>,
  <span>
    NEWS_PS_TEST
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform canonical, origin https://www.bbc.com, isUK, false, pageType article, statsDestination NEWS_PS_TEST & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    canonical
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    article
  </span>,
  <span>
    NEWS_PS_TEST
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, origin https://www.bbc.com, isUK, false, pageType article, statsDestination NEWS_PS_TEST & statsPageIdentifier persian.articles.c0000000000o.page 1`] = `
Array [
  <span>
    default
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    article
  </span>,
  <span>
    NEWS_PS_TEST
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;

exports[`RequestContext should have a request object for platform default, origin https://www.bbc.com, isUK, false, pageType article, statsDestination NEWS_PS_TEST & statsPageIdentifier persian.articles.c0000000000o.page 2`] = `
Array [
  <span>
    default
  </span>,
  <span>
    false
  </span>,
  <span />,
  <span>
    article
  </span>,
  <span>
    NEWS_PS_TEST
  </span>,
  <span>
    persian.articles.c0000000000o.page
  </span>,
]
`;
